<resources>
    <string name="app_name">GroundControl3</string>
    <string name="coffee_btn_add">Add Coffee</string>
    <string name="coffee_btn_delete">Delete Coffee</string>
    <string name="coffee_btn_edit">Edit Volumes</string>
    <string name="coffee_btn_rename">Edit Name</string>

    <string name="cycle_btn_addcycle">Add Cycle</string>
    <string name="cycle_btn_deletecycle">Delete Cycle</string>
    <string name="cycle_btn_savevolume">Save Volume</string>
    <string name="cycle_txt_1">1</string>
    <string name="cycle_txt_2">2</string>
    <string name="cycle_txt_3">3</string>
    <string name="cycle_txt_4">4</string>
    <string name="cycle_txt_5">5</string>
    <string name="cycle_txt_6">6</string>
    <string name="cycle_txt_brewsecs">Brew Secs</string>
    <string name="cycle_txt_coffee">Coffee</string>
    <string name="cycle_txt_cycle">Cycle</string>
    <string name="cycle_txt_initialvolume">Initial Volume</string>
    <string name="cycle_txt_totalvolume">Total Volume</string>
    <string name="cycle_txt_vacuumsecs">Vacuum Secs</string>
    <string name="cycle_txt_volumeformat">%d mL</string>
    <string name="cycle_txt_volumeml">Volume mL</string>
</resources>
