<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_parms"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/CyclesConstant"
            android:text="@string/cycle_txt_cycle"
            />
        <TextView
            style="@style/CyclesConstant"
            android:layout_width="90dp"
            android:text="@string/cycle_txt_volumeml"
            />
        <TextView
            style="@style/CyclesConstant"
            android:layout_width="90dp"
            android:text="@string/cycle_txt_brewsecs"
            />
        <TextView
            style="@style/CyclesConstant"
            android:layout_width="90dp"
            android:text="@string/cycle_txt_vacuumsecs"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView style="@style/CyclesConstant" android:text="@string/cycle_txt_1"/>
        <include layout="@layout/cycle_partial_parameter_row"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView style="@style/CyclesConstant" android:text="@string/cycle_txt_2"/>
        <include layout="@layout/cycle_partial_parameter_row"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView style="@style/CyclesConstant" android:text="@string/cycle_txt_3"/>
        <include layout="@layout/cycle_partial_parameter_row"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView style="@style/CyclesConstant" android:text="@string/cycle_txt_4"/>
        <include layout="@layout/cycle_partial_parameter_row"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView style="@style/CyclesConstant" android:text="@string/cycle_txt_5"/>
        <include layout="@layout/cycle_partial_parameter_row"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView style="@style/CyclesConstant" android:text="@string/cycle_txt_6"/>
        <include layout="@layout/cycle_partial_parameter_row"/>
    </TableRow>
</TableLayout>
