<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_managecoffees"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ssimon.cyclesactivity.ui.CoffeeActivity"
    android:orientation="vertical"
    >
    <TextView
        style="@style/LabelText"
        android:text="Coffees"
        />
    <ListView
        android:id="@+id/list_coffees"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="24dp"
        android:choiceMode="singleChoice"
        android:listSelector="#666666"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        >
        <Button
            style="@style/Button"
            android:text="@string/coffee_btn_rename"
            />
        <Button
            style="@style/Button"
            android:text="@string/coffee_btn_edit"
            android:onClick="onClickEditCoffee"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            style="@style/Button"
            android:text="@string/coffee_btn_add"
            android:onClick="onClickNewCoffee"
            />
        <Button
            android:id="@+id/btn_delete"
            style="@style/Button"
            android:text="@string/coffee_btn_delete"
            android:onClick="onClickDeleteCoffee"
            />
    </LinearLayout>
 </LinearLayout>
