<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/MatchParent"
              android:paddingBottom="8dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="8dp"
              android:orientation="vertical"
    >
    <TextView
        android:id="@+id/txt_coffee"
        style="@style/HeadingText"
        android:text="French Roast"
        />
    <TextView
        style="@style/LabelText"
        android:text="@string/cycle_txt_coffee"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/txt_totalvolume"
            style="@style/HeadingText"
            android:text="500 mL"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />
        <TextView
            android:id="@+id/txt_initialvolume"
            style="@style/HeadingText"
            android:text="500 mL"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            />
        <TextView
            style="@style/LabelText"
            android:text="@string/cycle_txt_totalvolume"
            android:layout_below="@+id/txt_totalvolume"
            android:layout_alignParentStart="true"
            />
        <TextView
            style="@style/LabelText"
            android:text="@string/cycle_txt_initialvolume"
            android:layout_below="@+id/txt_totalvolume"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <include layout="@layout/common_spacer"/>
    <include layout="@layout/cycle_partial_table"/>
    <include layout="@layout/common_spacer"/>
    <include layout="@layout/cycle_partial_seekbar"/>
    <include layout="@layout/cycle_partial_seekbarbuttons"/>
    <include layout="@layout/common_spacer"/>
    <include layout="@layout/cycle_partial_buttons"/>
</LinearLayout>
    <!--
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      style="@style/MatchParent"
      android:paddingBottom="8dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:paddingTop="8dp"
      android:orientation="vertical"
      >
      <TextView
          android:id="@+id/txt_coffee"
          style="@style/HeadingText"
          android:text="French Roast"
          />
      <TextView
          style="@style/LabelText"
          android:text="@string/cycle_txt_coffee"
          />
      <TextView
          android:id="@+id/txt_totalvolume"
          style="@style/HeadingText"
          android:text="500 mL"
          />
      <TextView
          style="@style/LabelText"
          android:text="@string/cycle_txt_totalvolume"
          />
      <include layout="@layout/common_spacer"/>
      <include layout="@layout/cycle_partial_table"/>
      <include layout="@layout/common_spacer"/>
      <include layout="@layout/cycle_partial_seekbar"/>
      <include layout="@layout/cycle_partial_seekbarbuttons"/>
      <include layout="@layout/common_spacer"/>
      <include layout="@layout/cycle_partial_buttons"/>
    </LinearLayout>
    -->
